Commented out main class and removed js file from public folder to ensure functionality. Added partials folder to views for signup and login page styling. Attempted to fix /profile page error, by removing and adding multiple models and controllers.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,12 +18,12 @@
 
 		<!--Loader-->
 
-		<div class="loader">_Booting</div>
-	<section class="main">
+		<!-- <div class= "loader">_Booting</div> -->
+	<section>
 		<!--Navigation--> 
 		<section class="navbar">
 			<div class="container flex">
-				<h1 class="logo">bignoseidiot</h1>
+				<h1 class="logo">Character Select</h1>
 				<nav>
 					<ul>
 						<li><a href="#">Home</a></li>
