--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,8 @@
 
 		<!--Loader-->
 
-		<!-- <div class= "loader">_Booting</div> -->
-	<section>
+		<div class= "loader">_Booting</div>
+	<section class="main">
 		<!--Navigation--> 
 		<section class="navbar">
 			<div class="container flex">
@@ -65,6 +65,6 @@
 			</div>
 		</footer>
 	</section>
-		<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 	</body>
 </html>
