Configured current file structure to include new routes and controllers for profile, tops, bottoms, support. Configured server.js file to include new routes and controllers. Currently not functional

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 				<nav>
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="support.html">Support</a></li>
+						<li><a href="support.ejs">Support</a></li>
 						<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
 						<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
