--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -17,11 +17,11 @@
 	<!--Navigation--> 
 	<section class="navbar">
 		<div class="container flex">
-			<h1 class="logo">bignoseidiot</h1>
+			<h1 class="logo">Character Select</h1>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="support.html">Support</a></li>
+					<li><a href="support.ejs">Support</a></li>
 					<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
 					<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
 				</ul>
