Altered each route and views, to ensure that functionality is working. Each route now works and buttons take lead to correponding pages aswell.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,9 +27,9 @@
 				<nav>
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="support.ejs">Support</a></li>
+						<li><a href="support">Support</a></li>
 						<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-						<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+						<li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -40,12 +40,12 @@
 		<section class="select flex">
 			<div class="flex">
 				<h2>Tops</h2>
-				<a href="tops.html"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
+				<a href="tops"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
 				<img src="img/hoodie2.svg" alt="">
 			</div>
 			<div class="flex">
 				<h2>Bottoms</h2>
-				<a href="bottoms.html"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
+				<a href="bottoms"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
 				<img src="img/trousers.svg" alt="">
 			</div>
 			<div class="flex">
