--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -20,10 +20,10 @@
 			<h1 class="logo">Character Select</h1>
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="support.ejs">Support</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="support">Support</a></li>
 					<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-					<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+					<li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
 				</ul>
 			</nav>
 		</div>
