Ensured full functinoality of pages for support and bottoms. Altered bottoms class to match the styling of tops page

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -13,7 +13,7 @@
 
 
 </head>
-<body class="tops">
+<body class="bottoms">
 	<!--Navigation--> 
 	<section class="navbar">
 		<div class="container flex">
@@ -32,12 +32,42 @@
     <!--Tops-->
 
     <section class=" container grid">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+		<div class="flex">
+			<section class="products">
+				<img src="img/FRONT2.jpg" alt="">
+			</section>
+		</div>
+
+		<div class="flex">
+			<section class="products">
+				<img src="img/FRONT2.jpg" alt="">
+			</section>
+		</div>
+
+		<div class="flex">
+			<section class="products">
+				<img src="img/FRONT2.jpg" alt="">
+			</section>
+		</div>
+
+		<div class= "flex">
+			<section class="products">
+				<img src="img/FRONT2.jpg" alt="">
+			</section>
+		</div>
+
+		<div class="flex">
+			<section class="products">
+				<img src="img/FRONT2.jpg" alt="">
+			</section>
+		</div>
+
+		<div class="flex">
+			<section class="products">
+				<img src="img/FRONT2.jpg" alt="">
+			</section>
+		</div>
+     
     </section>
 
 </body>
