--- a/views/support.ejs
+++ b/views/support.ejs
@@ -20,9 +20,9 @@
 				<h1 class="logo">bignoseidiot</h1>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="#">Support</a></li>
-						<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+						<li><a href="signup"><i class="fa-solid fa-cart-shopping"></i></a></li>
 						<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
 				</nav>
