Fixed issue in support.ejs file. Added 'add to cart' buttons on product pages (tops and bottoms) and added new id to be used in the future

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -17,7 +17,7 @@
 	<!--Navigation--> 
 	<section class="navbar">
 		<div class="container flex">
-			<h1 class="logo">bignoseidiot</h1>
+			<h1 class="logo">Character Select</h1>
 			<nav>
 				<ul>
 					<li><a href="/">Home</a></li>
@@ -35,36 +35,42 @@
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class= "flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
      
