--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -35,36 +35,42 @@
         <div class="flex">
 			<section class="products">
 				<img src="img/product1.jpeg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/product1.jpeg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/product1.jpeg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class= "flex">
 			<section class="products">
 				<img src="img/product1.jpeg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/product1.jpeg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/product1.jpeg" alt="">
+				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
 			</section>
 		</div>
      
