--- a/views/support.ejs
+++ b/views/support.ejs
@@ -17,13 +17,13 @@
 		<!--Navigation--> 
 		<section class="navbar">
 			<div class="container flex">
-				<h1 class="logo">bignoseidiot</h1>
+				<h1 class="logo">Character Select</h1>
 				<nav>
 					<ul>
 						<li><a href="/">Home</a></li>
 						<li><a href="#">Support</a></li>
-						<li><a href="signup"><i class="fa-solid fa-cart-shopping"></i></a></li>
-						<li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+						<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+						<li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
 				</nav>
 			</div>
