--- a/views/support.ejs
+++ b/views/support.ejs
@@ -29,6 +29,18 @@
 			</div>
 		</section>
 
+		<nav class="mini-cart">
+			<ul>
+				<li><span>Item 1</span></li>
+				<li><span>Item 2</span></li>
+				<li><span>Item 3</span></li>
+				<li><span>Item 4</span></li>
+				<li><span>Item 5</span></li>
+				<li><span>Item 6</span></li>
+			</ul>
+			<div class = "flex"><a href="#"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+		</nav>
+
 		<!--Selections-->
 
 		<section class="select flex">
@@ -45,3 +57,5 @@
                 <p>For any other issues, feel free to contact our support line. Mulitple customer service representatives will be happy to help with your issue.</p>
             </div>
         </section>
+		<script type="text/javascript" src="/js/main.js"></script>
+		</body>
