--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,12 +28,24 @@
 					<ul>
 						<li><a href="#">Home</a></li>
 						<li><a href="support">Support</a></li>
-						<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+						<li><a href="#"><i class="fa-solid fa-cart-shopping" id="cart"></i></a></li>
 						<li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
 				</nav>
 			</div>
 		</section>
+
+		<nav class="mini-cart">
+			<ul>
+				<li><span>Item 1</span></li>
+				<li><span>Item 2</span></li>
+				<li><span>Item 3</span></li>
+				<li><span>Item 4</span></li>
+				<li><span>Item 5</span></li>
+				<li><span>Item 6</span></li>
+			</ul>
+			<div class = "flex"><a href="#"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+		</nav>
 
 		<!--Selections-->
 
