--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -29,6 +29,18 @@
 		</div>
 	</section>
 
+	<nav class="mini-cart">
+		<ul>
+			<li><span>Item 1</span></li>
+			<li><span>Item 2</span></li>
+			<li><span>Item 3</span></li>
+			<li><span>Item 4</span></li>
+			<li><span>Item 5</span></li>
+			<li><span>Item 6</span></li>
+		</ul>
+		<div class = "flex"><a href="#"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+	</nav>
+
     <!--Tops-->
 
     <section class=" container grid">
@@ -75,6 +87,6 @@
 		</div>
      
     </section>
-
+	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
