Implemented Checkout controller, route and view to allow cart button to redirect to checkout page, still need to populate based on item ID

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -38,7 +38,7 @@
 			<li><span>Item 5</span></li>
 			<li><span>Item 6</span></li>
 		</ul>
-		<div class = "flex"><a href="#"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+		<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
 	</nav>
 
     <!--Tops-->
