Added black image variants to better suit retro style. Changed add to cart buttons to allow for better visibility. Performed these changed on Tops and bottoms pages.

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -47,42 +47,42 @@
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class= "flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
      
