--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -46,43 +46,49 @@
     <section class=" container grid">
         <div class="flex">
 			<section class="products">
-				<img src="img/product1.jpeg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<span>>_Tops/Kirby T-Shirt</span>
+				<img src="img/FRONT1-Black.jpg" alt="">
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
-				<img src="img/product1.jpeg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<span>>_Tops/Mario T-Shirt</span>
+				<img src="img/FRONT2-Black.jpg" alt="">
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
-				<img src="img/product1.jpeg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<span>>_Tops/Zelda Cartridge T-Shirt</span>
+				<img src="img/FRONT3-Black.jpg" alt="">
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class= "flex">
 			<section class="products">
-				<img src="img/product1.jpeg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<span>>_Tops/Mirror Shield T-Shirt</span>
+				<img src="img/FRONT4-Black.jpg" alt="">
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
-				<img src="img/product1.jpeg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<span>>_Tops/Fire Red T-Shirt</span>
+				<img src="img/FRONT5-Black.jpg" alt="">
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
 			<section class="products">
-				<img src="img/product1.jpeg" alt="">
-				<a href="#"><button class="btn btn-pushable btn-pushable--black" id="Add-to-cart">Add to cart</button></a>
+				<span>>_Tops/Link T-Shirt</span>
+				<img src="img/FRONT6-Black.jpg" alt="">
+				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
      
