--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,64 @@ footer {
      border-bottom: 3px solid rgb(17, 17, 17);
    } 
     
+
+   .btn-bottom-stripe {
+     border: 0px;
+     background: rgb(255, 255, 255);
+     font-style: inherit;
+     font-variant: inherit;
+     font-weight: inherit;
+     font-stretch: inherit;
+     font-size: inherit;
+     font-family: inherit;
+     line-height: normal;
+     cursor: pointer;
+     display: block;
+     text-decoration: none;
+     text-transform: uppercase;
+     padding: 16px 56px 22px;
+     border-radius: 6px;
+     margin: 0px 0px 16px;
+     transition: all 0.5s ease 0s;
+     overflow: hidden;
+     position: relative;
+   } 
+    
+   .btn-bottom-stripe::after {
+     content: "";
+     display: block;
+     height: 7px;
+     width: 100%;
+     backface-visibility: hidden;
+     position: absolute;
+     left: 0px;
+     bottom: 0px;
+     background-size: 7px 7px;
+   } 
+    
+   .btn-bottom-stripe:hover {
+     color: rgb(255, 255, 255);
+   } 
+    
+   .btn-bottom-stripe:hover::after {
+     background-image: repeating-linear-gradient(45deg, rgb(255, 255, 255), rgb(255, 255, 255) 1px, transparent 2px, transparent 5px);
+     animation: 12s linear 0s infinite normal forwards running stripe-slide;
+   } 
+    
+   .btn-bottom-stripe--black {
+     color: rgb(51, 51, 51);
+     border: 2px solid rgb(51, 51, 51);
+   } 
+    
+   .btn-bottom-stripe--black::after {
+     border-top: 2px solid rgb(51, 51, 51);
+     background-image: repeating-linear-gradient(45deg, rgb(51, 51, 51), rgb(51, 51, 51) 1px, transparent 2px, transparent 5px);
+   } 
+    
+   .btn-bottom-stripe--black:hover {
+     background-color: rgb(51, 51, 51);
+   } 
+    
     
 
    .grid {
