Altered Tops and bottoms layout with additional flex class for better styling

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -45,42 +45,43 @@
 
     <section class=" container grid">
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
+				<span>>_Tops/Link T-Shirt</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class= "flex">
-			<section class="products">
+			<section class="products flex">
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
