--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -45,7 +45,7 @@
 
     <section class=" container grid">
         <div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<span>>_Tops/Kirby T-Shirt</span>
 				<img src="img/FRONT1-Black.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<span>>_Tops/Mario T-Shirt</span>
 				<img src="img/FRONT2-Black.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
@@ -61,7 +61,7 @@
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<span>>_Tops/Zelda Cartridge T-Shirt</span>
 				<img src="img/FRONT3-Black.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class= "flex">
-			<section class="products">
+			<section class="products flex">
 				<span>>_Tops/Mirror Shield T-Shirt</span>
 				<img src="img/FRONT4-Black.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
@@ -77,7 +77,7 @@
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<span>>_Tops/Fire Red T-Shirt</span>
 				<img src="img/FRONT5-Black.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
@@ -85,7 +85,7 @@
 		</div>
 
 		<div class="flex">
-			<section class="products">
+			<section class="products flex">
 				<span>>_Tops/Link T-Shirt</span>
 				<img src="img/FRONT6-Black.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
