--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -46,6 +46,7 @@
     <section class=" container grid">
 		<div class="flex">
 			<section class="products flex">
+				<span>>_Bottoms/ Pants 1</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
@@ -53,6 +54,7 @@
 
 		<div class="flex">
 			<section class="products flex">
+				<span>>_Bottoms/ Pants 2</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
@@ -60,7 +62,7 @@
 
 		<div class="flex">
 			<section class="products flex">
-				<span>>_Tops/Link T-Shirt</span>
+				<span>>_Bottoms/ Pants 3</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
@@ -68,6 +70,7 @@
 
 		<div class= "flex">
 			<section class="products flex">
+				<span>>_Bottoms/ Pants 4</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
@@ -75,6 +78,7 @@
 
 		<div class="flex">
 			<section class="products flex">
+				<span>>_Bottoms/ Pants 5</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
@@ -82,6 +86,7 @@
 
 		<div class="flex">
 			<section class="products flex">
+				<span>>_Bottoms/ Pants 6</span>
 				<img src="img/FRONT2.jpg" alt="">
 				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
 			</section>
