Created new form controls for all products, now only allowing a product to be added to cart if a certain size is selected. Form action is connected through addProduct function in checkout controller. addProduct function as well as cart functionality is still a work in progress

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -330,6 +330,11 @@ footer {
      height: 100%;
  }
 
+ #size {
+     width: 50%;
+     margin-left: 25%;
+ }
+
  .container .flex {
      align-items: flex-start;
  }
