--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -48,15 +48,30 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 1</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
-			</section>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 		</div>
 
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 2</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -64,7 +79,15 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 3</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -72,7 +95,15 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 4</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -80,7 +111,15 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 5</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -88,7 +127,15 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 6</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
      
