--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -48,7 +48,15 @@
 			<section class="products flex">
 				<span>>_Tops/Kirby T-Shirt</span>
 				<img src="img/FRONT1-Black.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -56,7 +64,15 @@
 			<section class="products flex">
 				<span>>_Tops/Mario T-Shirt</span>
 				<img src="img/FRONT2-Black.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -64,7 +80,15 @@
 			<section class="products flex">
 				<span>>_Tops/Zelda Cartridge T-Shirt</span>
 				<img src="img/FRONT3-Black.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -72,7 +96,15 @@
 			<section class="products flex">
 				<span>>_Tops/Mirror Shield T-Shirt</span>
 				<img src="img/FRONT4-Black.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -80,7 +112,15 @@
 			<section class="products flex">
 				<span>>_Tops/Fire Red T-Shirt</span>
 				<img src="img/FRONT5-Black.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
 
@@ -88,7 +128,15 @@
 			<section class="products flex">
 				<span>>_Tops/Link T-Shirt</span>
 				<img src="img/FRONT6-Black.jpg" alt="">
-				<a href="#"><button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button></a>
+				<form action="/checkout/addProduct/?_method=PUT">
+					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<select name="size" id="size" required>
+						<option value="">None</option>
+						<option value="small">Small</option>
+						<option value="medium">Medium</option>
+						<option value="large">Large</option>
+					</select>
+				</form>
 			</section>
 		</div>
      
