Seperated the functinoality of cart and chekcout, by creating a completely new cart controller and route and isolating the product management functinoality through the cart controller.

--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -48,7 +48,7 @@
 			<section class="products flex">
 				<span>>_Tops/Kirby T-Shirt</span>
 				<img src="img/FRONT1-Black.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -64,7 +64,7 @@
 			<section class="products flex">
 				<span>>_Tops/Mario T-Shirt</span>
 				<img src="img/FRONT2-Black.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -80,7 +80,7 @@
 			<section class="products flex">
 				<span>>_Tops/Zelda Cartridge T-Shirt</span>
 				<img src="img/FRONT3-Black.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -96,7 +96,7 @@
 			<section class="products flex">
 				<span>>_Tops/Mirror Shield T-Shirt</span>
 				<img src="img/FRONT4-Black.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -112,7 +112,7 @@
 			<section class="products flex">
 				<span>>_Tops/Fire Red T-Shirt</span>
 				<img src="img/FRONT5-Black.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -128,7 +128,7 @@
 			<section class="products flex">
 				<span>>_Tops/Link T-Shirt</span>
 				<img src="img/FRONT6-Black.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
