General file updates to accommodate new cart controller

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -48,7 +48,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 1</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -63,7 +63,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 2</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -79,7 +79,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 3</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -95,7 +95,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 4</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -111,7 +111,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 5</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -127,7 +127,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 6</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/checkout/addProduct/?_method=PUT">
+				<form action="/cart/addProduct/?_method=PUT">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
