--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -38,7 +38,7 @@
 			<li><span>Item 5</span></li>
 			<li><span>Item 6</span></li>
 		</ul>
-		<div class = "flex"><a href="#"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+		<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
 	</nav>
 
     <!--Tops-->
@@ -48,7 +48,7 @@
 			<section class="products flex">
 				<span>>_Tops/Kirby T-Shirt</span>
 				<img src="img/FRONT1-Black.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form onsubmit="addToCart('1234')">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
