Removed cart variable. Implemented hidden input value for each product to allow for better searching using suitable data sent over, replaced other form endpoints to work with previously tested endpoints to trigger addToCart functinoality.

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -41,15 +41,16 @@
 		<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
 	</nav>
 
-    <!--Tops-->
+    <!--Bottoms-->
 
     <section class=" container grid">
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 1</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Bottoms/Product">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -63,7 +64,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 2</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -79,7 +80,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 3</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -95,7 +96,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 4</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -111,7 +112,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 5</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
@@ -127,7 +128,7 @@
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 6</span>
 				<img src="img/FRONT2.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<select name="size" id="size" required>
 						<option value="">None</option>
