--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -50,7 +50,7 @@
 				<img src="img/FRONT1-Black.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black" type="submit"> Add To Cart </button>
-					<label for="size"></label>
+					<input type="hidden" name="name" value=">_Tops/Kriby T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -67,6 +67,7 @@
 				<img src="img/FRONT2-Black.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button type="submit" class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Tops/Mario T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -81,8 +82,9 @@
 			<section class="products flex">
 				<span>>_Tops/Zelda Cartridge T-Shirt</span>
 				<img src="img/FRONT3-Black.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Tops/Zelda Cartridge T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -97,8 +99,9 @@
 			<section class="products flex">
 				<span>>_Tops/Mirror Shield T-Shirt</span>
 				<img src="img/FRONT4-Black.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Tops/Mirror Shield T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -113,8 +116,9 @@
 			<section class="products flex">
 				<span>>_Tops/Fire Red T-Shirt</span>
 				<img src="img/FRONT5-Black.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Tops/Fire Red T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -129,8 +133,9 @@
 			<section class="products flex">
 				<span>>_Tops/Link T-Shirt</span>
 				<img src="img/FRONT6-Black.jpg" alt="">
-				<form action="/cart/addProduct/?_method=PUT">
+				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Tops/Link T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
