--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -66,6 +66,7 @@
 				<img src="img/FRONT2.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Bottoms/Product">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -82,6 +83,7 @@
 				<img src="img/FRONT2.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Bottoms/Product">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -98,6 +100,7 @@
 				<img src="img/FRONT2.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Bottoms/Product">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -114,6 +117,7 @@
 				<img src="img/FRONT2.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Bottoms/Product">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
@@ -130,6 +134,7 @@
 				<img src="img/FRONT2.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
+					<input type="hidden" name="name" value=">_Bottoms/Product">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
