Altered cart controller addProduct function, currentProduct functinoality will now be returning the object matched from the database given name and size

--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -50,7 +50,7 @@
 				<img src="img/FRONT1-Black.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black" type="submit"> Add To Cart </button>
-					<input type="hidden" name="name" value=">_Tops/Kriby T-Shirt">
+					<input type="hidden" name="name" value=">_Tops/Kirby T-Shirt">
 					<select name="size" id="size" required>
 						<option value="">None</option>
 						<option value="small">Small</option>
