Added Home and login buttons for signup/login pages. Working on cart retrieval using real data

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,8 +6,10 @@
               <p><strong>User Name</strong>: <%= user.userName %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
+              <h6>Continue Shopping?</h6>
+              <a href="/" class="col-3 btn btn-primary">Home</a>
           </div>
-          <!-- <div class="mt-5">
+          <div class="mt-5">
             <h2>Add a post</h2>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
@@ -24,7 +26,7 @@
               </div>
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
             </form>
-          </div> -->
+          </div>
       </div>
     </div>
   </div>
