--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,6 +32,8 @@
                       </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
+                  <h6>Already have an account?</h6>
+                  <a href="login" class="btn btn-primary">Login</a>
             </section>
         </div>
     </main>
