--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,15 +36,35 @@
 		</section>
 
 		<nav class="mini-cart">
-			<ul>
-				<li><span>Item 1</span></li>
-				<li><span>Item 2</span></li>
-				<li><span>Item 3</span></li>
-				<li><span>Item 4</span></li>
-				<li><span>Item 5</span></li>
-				<li><span>Item 6</span></li>
-			</ul>
-			<div class = "flex"><a href="#"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+			<table>
+				<% for(var i=0; i < products.length; i++) { %>
+				   <tr>
+					 <td><%= products[i].id %></td>
+					 <td><%= products[i].name %></td>
+				   </tr>
+				<% } %>
+				</table>
+			<!-- <ul>
+				<li>
+					<span>Item 1</span>
+				</li>
+				<li>
+					<span>Item 2</span>
+				</li>
+				<li>
+					<span>Item 3</span>
+				</li>
+				<li>
+					<span>Item 4</span>
+				</li>
+				<li>
+					<span>Item 5</span>
+				</li>
+				<li>
+					<span>Item 6</span>
+				</li>
+			</ul> -->
+			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
 		</nav>
 
 		<!--Selections-->
